Add query params for Customer to API Spec and use correct filtering in UI
